--- a/styles.css
+++ b/styles.css
@@ -1,112 +1,60 @@
-body {
+div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 3px solid rgb(230, 139, 4);
+}
+
+div.gallery img {
   width: 100%;
-  max-width: 500px;
-  margin: 0 auto;
-  background-color: rgb(233, 238, 194);
-  font-size: 62.5%;
+  height: auto;
 }
 
-main,
-footer {
-  background-color: rgb(215, 247, 196);
-  opacity: 1;
-  font-size: 1.6em;
+div.desc {
+  padding: 3px;
+  text-align: center;
+  color: rgb(59, 56, 52);
 }
 
-header {
-  padding: 3em 0;
+* {
+  box-sizing: border-box;
 }
 
-header h1 {
+.responsive {
+  padding: 0 6px;
+  float: left;
+  width: 24.99999%;
+}
+
+@media only screen and (max-width: 700px) {
+  .responsive {
+    width: 49.99999%;
+    margin: 6px 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .responsive {
+    width: 100%;
+  }
+}
+
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+div.headerphoto {
   text-align: center;
 }
 
-h1,
-h2,
-h3 {
-  margin: 3;
-}
-
-h1 {
-  font-size: 2.5em;
-}
-
-main h2 {
-  padding: 0.625em 0 0.625em 0.625em;
-}
-
-section {
-  margin: 1.875em 0;
-}
-
-section:first-child {
-  margin-top: 0;
-}
-
-section:last-child {
-  margin-bottom: 0;
-}
-
-nav ul {
-  text-align: center;
-  padding: 0;
-}
-
-nav ul li {
-  display: inline-block;
-  margin-right: 1em;
-  font-size: 0.75em;
+div.copywright {
+  float: left;
 }
 
 p {
-  padding: 1.25em;
-}
-
-figure {
-  margin: 0;
-  padding: 0;
+  font-size: 12px;
   text-align: center;
-}
-
-figcaption {
-  font-style: italic;
-}
-
-footer {
-  text-align: center;
-  padding: 3em;
-}
-
-footer p {
-  display: inline-block;
-}
-
-img {
-  width: 100%;
-  max-width: 100%;
-}
-
-@media screen and (max-width: 680px) {
-  nav ul li {
-    margin: 1em 0;
-    display: block;
-    font-size: 1em;
-  }
-  body {
-    font-size: 50%;
-  }
-}
-/* Container holding the image and the text */
-.paw_container {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-
-/* Centered text */
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
